--- a/module1/github/what is github.html
+++ b/module1/github/what is github.html
@@ -9,4 +9,12 @@ step3: create a new repository
 https://github.com/Brijesh1990/reactjs_3pmmwf.git
 step4:upload all local pc data on github links using git commands
 
-step5: download git software 
+step5: download git software
+
+step 6: git all commands to upload file on github.com
+
+git init
+git add .
+git commit -m "first commit"
+git remote add origin https://github.com/Brijesh1990/reactjs_3pmmwf.git
+git push -u origin main
